@@ -45,8 +45,8 @@ for or_dep in depends:
             continue
         srcrec = srcrecords.lookup(srcpkg_name)
         if srcrec:
-            #print srcrecords.Package
-            #print srcrecords.Binaries
+            #print srcrecords.package
+            #print srcrecords.binaries
             bd = srcrecords.build_depends
             #print "%s: %s " % (srcpkg_name, bd)
             for b in bd:
