@@ -3,6 +3,6 @@ import apt_pkg
 
 Parse = apt_pkg.TagFile(open("/var/lib/dpkg/status", "r"))
 
-while Parse.Step() == 1:
-    print Parse.Section.get("Package")
-    print apt_pkg.ParseDepends(Parse.Section.get("Depends", ""))
+while Parse.step() == 1:
+    print Parse.section.get("Package")
+    print apt_pkg.parse_depends(Parse.section.get("Depends", ""))
