@@ -4,9 +4,9 @@ import apt_pkg
 import os.path
 
 if __name__ == "__main__":
-    apt_pkg.Config.Set("APT::Update::Pre-Invoke::",
+    apt_pkg.config.set("APT::Update::Pre-Invoke::",
                        "touch /tmp/update-about-to-run")
-    apt_pkg.Config.Set("APT::Update::Post-Invoke::",
+    apt_pkg.config.set("APT::Update::Post-Invoke::",
                        "touch /tmp/update-was-run")
     c = apt.Cache()
     res = c.update(apt.progress.TextFetchProgress())
